switched to yaourt and added package key refreshing

--- a/gitlab-ci-runner/Dockerfile
+++ b/gitlab-ci-runner/Dockerfile
@@ -6,21 +6,20 @@ MAINTAINER  nekroze "nekroze@eturnilnetwork.com"
 
 # install deps
 
-RUN  packer-color -Syu
+RUN  pacman-key --refresh-keys
+RUN  yaourt -Syu --noconfirm
 
-RUN  packer-color -S --noconfirm --noedit ruby
-RUN  packer-color -S --noconfirm --noedit ruby-bundler wget curl libxml2 libxslt
-RUN  packer-color -S --noconfirm --noedit readline openssl icu postfix libyaml
-RUN  packer-color -S --noconfirm --noedit git openssh zlib
+RUN  yaourt -S --noconfirm ruby
+RUN  yaourt -S --noconfirm ruby-bundler wget curl libxml2 libxslt
+RUN  yaourt -S --noconfirm readline openssl icu postfix libyaml
+RUN  yaourt -S --noconfirm git openssh zlib
 
 ## install gitlab-ci-runner into /gcr
 
 RUN  git clone https://github.com/Ensequence/gitlab-ci-runner.git gcr && cd gcr
 RUN  cd gcr && bundle install 
 
-
 # setup ssh
-
 ## sub-optimal... it seems that ssh-keygen doesn't honor $HOME
 ## mkdir for .ssh keys in the base director
 RUN  mkdir /.ssh
