Fix entrypoint and added unrar and unzip

--- a/deluge/Dockerfile
+++ b/deluge/Dockerfile
@@ -2,10 +2,10 @@ FROM base/arch
 MAINTAINER Taylor "Nekroze" Lawson
 
 RUN pacman -Syu --noconfirm
-RUN pacman -S --noconfirm python2-mako deluge
+RUN pacman -S --noconfirm python2-mako deluge unrar unzip
 
 VOLUME /config
 
 EXPOSE 8112 58846
 
-ENTRYPOINT CMD /usr/bin/deluge-web -c /config --no-ssl
+CMD /usr/bin/deluged -c /config && /usr/bin/deluge-web -c /config
