--- a/headphones/Dockerfile
+++ b/headphones/Dockerfile
@@ -1,8 +1,8 @@
-FROM base/arch
+FROM base/archlinux
 MAINTAINER Taylor "Nekroze" Lawson
 
 RUN pacman -Syu --noconfirm
-RUN pacman -S --noconfirm python2 git
+RUN pacman -S --noconfirm python2-pyopenssl git
 
 RUN git clone https://github.com/rembo10/headphones.git /headphones
 
