--- a/sabnzbd/Dockerfile
+++ b/sabnzbd/Dockerfile
@@ -1,7 +1,7 @@
 FROM base/archlinux
 MAINTAINER Taylor "Nekroze" Lawson
 
-RUN pacman -Syu --noconfirm
+RUN pacman -Sy --noconfirm
 RUN pacman -S --noconfirm python2-pyopenssl git
 
 RUN git clone https://github.com/sabnzbd/sabnzbd.git /sabnzbd
