--- a/sickbeard/Dockerfile
+++ b/sickbeard/Dockerfile
@@ -2,7 +2,8 @@ FROM base/archlinux
 MAINTAINER Taylor "Nekroze" Lawson
 
 RUN pacman -Sy --noconfirm
-RUN pacman -S --noconfirm python2-pyopenssl python2-cheetah git
+RUN pacman -S --noconfirm python2-pyopenssl git
+RUN pacman -S --noconfirm python2-cheetah
 
 RUN git clone https://github.com/midgetspy/Sick-Beard.git /sickbeard
 
