--- a/maraschino/Dockerfile
+++ b/maraschino/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Taylor "Nekroze" Lawson
 
 RUN pacman -Sy --noconfirm
 RUN pacman -S --noconfirm git python2-pyopenssl
-RUN pacman -S --noconfirm ssh sshpass
+RUN pacman -S --noconfirm openssh sshpass
 
 RUN git clone https://github.com/mrkipling/maraschino.git /maraschino
 
