--- a/notebooks/Dockerfile
+++ b/notebooks/Dockerfile
@@ -2,7 +2,7 @@ FROM base/archlinux
 MAINTAINER Taylor "Nekroze" Lawson
 
 RUN pacman -Sy --noconfirm
-RUN pacman -S --noconfirm ipython python-pyzmq python-tornado python-nose python-jinja python-pygments
+RUN pacman -S --noconfirm ipython python-pyzmq python-tornado python-nose python-jinja python-pygments texlive-core
 
 RUN ipython profile create
 
