--- a/notebooks/Dockerfile
+++ b/notebooks/Dockerfile
@@ -5,12 +5,12 @@ RUN pacman -Sy --noconfirm
 RUN yes | pacman -S ipython python-pyzmq python-tornado python-nose python-jinja python-pygments texlive-core mesa-libgl python-matplotlib python-numpy
 
 RUN ipython profile create
-RUN cat <<EOF >> /.ipython/profile_default/ipython_notebook_config.py
-c.IPKernelApp.pylab = 'inline'
-c.NotebookApp.ip = '*'
-c.NotebookApp.open_browser = False
-c.NotebookApp.port = 8888
-c.NotebookApp.trust_xheaders = True
+RUN cat <<EOF >> /.ipython/profile_default/ipython_notebook_config.py \
+c.IPKernelApp.pylab = 'inline' \
+c.NotebookApp.ip = '*' \
+c.NotebookApp.open_browser = False \
+c.NotebookApp.port = 8888 \
+c.NotebookApp.trust_xheaders = True \
 EOF
 RUN ipython -c "%matplotlib"
 
