Removed certification file

--- a/notebooks/Dockerfile
+++ b/notebooks/Dockerfile
@@ -12,9 +12,7 @@ VOLUME /notebooks
 WORKDIR /notebooks
 
 EXPOSE 8888
-# Mount your cert here
-ENV PEM_FILE /key.pem
-ENV PASSWORD Dont make this your default
+ENV PASSWORD ChangeMe!
 
 ADD start.sh /root/start.sh
 
