--- a/notebooks/Dockerfile
+++ b/notebooks/Dockerfile
@@ -7,6 +7,7 @@ RUN yes | pacman -S ipython python-pyzmq python-tornado python-nose python-jinja
 ADD prep.sh /root/prep.sh
 RUN ipython profile create
 RUN sh /root/prep.sh
+RUN wget -O `ipython locate profile`/static/custom/custom.css https://raw.githubusercontent.com/nsonnad/base16-ipython-notebook/master/base16-solarized-dark.css
 
 VOLUME /notebooks
 WORKDIR /notebooks
