--- a/bacula-web/Dockerfile
+++ b/bacula-web/Dockerfile
@@ -5,7 +5,8 @@ RUN yum install httpd php php-gd php-gettext php-pgsql php-mysql php-pdo wget -y
 
 RUN wget http://www.bacula-web.org/files/bacula-web.org/downloads/bacula-web-latest.tgz && \
     tar -xzf bacula-web-latest.tgz -C /var/www/html/ && \
-    chown -Rv apache ./bacula-web
+    chown -Rv apache ./bacula-web && \
+    rm -f bacula-web-latest.tgz
 
 ENV DB_TYPE pgsql
 ENV DB_HOST database
