--- a/bacula-web/Dockerfile
+++ b/bacula-web/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos:centos6
 MAINTAINER Taylor "Nekroze" Lawson <tlawson@nekroze.com>
 
-RUN yum install httpd php php-gd php-gettext php-pgsql php-mysql php-pdo wget -y
+RUN yum install httpd php php-gd php-gettext php-pgsql php-mysql php-pdo wget tar -y
 
 RUN wget http://www.bacula-web.org/files/bacula-web.org/downloads/bacula-web-latest.tgz && \
     tar -xzf bacula-web-latest.tgz -C /var/www/html/ && \
