Attempt to fix keepass-http build error

--- a/keepass-http/Dockerfile
+++ b/keepass-http/Dockerfile
@@ -5,7 +5,8 @@ RUN echo "[archlinuxfr]" >> /etc/pacman.conf
 RUN echo "SigLevel = Never" >> /etc/pacman.conf
 RUN echo "Server = http://repo.archlinux.fr/$arch" >> /etc/pacman.conf
 
-RUN pacman -Sy –noconfirm && pacman -S pacman yaourt –noconfirm && pacman-db-upgrade
+RUN pacman -Sy --noconfirm && pacman -S pacman --noconfirm && pacman-db-upgrade
+RUN pacman -S yaourt --noconfirm
 
 RUN yaourt -S python-keepass-httpd-git --noconfirm
 
