Attempt to fix keepass-http build error

--- a/keepass-http/Dockerfile
+++ b/keepass-http/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Taylor "Nekroze" Lawson
 RUN pacman -Sy --noconfirm && pacman -S pacman --noconfirm && pacman-db-upgrade
 RUN echo "[archlinuxfr]" >> /etc/pacman.conf
 RUN echo "SigLevel = Never" >> /etc/pacman.conf
-RUN echo "Server = http://repo.archlinux.fr/$arch" >> /etc/pacman.conf
+RUN echo "Server = http://repo.archlinux.fr/x86_64" >> /etc/pacman.conf
 RUN pacman -S yaourt --noconfirm
 
 RUN yaourt -Sy python-keepass-httpd-git --noconfirm
